--- a/package.json
+++ b/package.json
@@ -6,14 +6,19 @@
     "@material-ui/core": "^4.9.5",
     "@material-ui/icons": "^4.9.1",
     "@material-ui/lab": "^4.0.0-alpha.47",
+    "@react-page/react-page": "^0.18.11",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "Dante2": "^0.5.0-rc4",
+    "alloyeditor": "^2.11.6",
     "axios": "^0.19.2",
+    "create-react-class": "^15.6.3",
     "material-ui-popup-state": "^1.5.3",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
     "react-icons": "^3.9.0",
+    "react-quill": "^1.3.5",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.0",
     "styled-components": "^5.0.1"
