--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -30,6 +30,7 @@
   ],
   "rules": {
     "prettier/prettier": "error",
+    "react/jsx-wrap-multilines": ["error", {"declaration": false, "assignment": false}],
     "react-hooks/rules-of-hooks": "error",
     "react-hooks/exhaustive-deps": "warn",
     "react/jsx-filename-extension": [1, { "extensions": [".tsx"] }],
