--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/styled-components": "^5.1.0",
     "axios": "^0.19.2",
     "clsx": "^1.1.0",
+    "html-react-parser": "^0.10.3",
     "jsonwebtoken": "^8.5.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
