--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -29,6 +29,8 @@
       "prettier"
   ],
   "rules": {
+    "react/prop-types": "off",
+    "react/jsx-props-no-spreading": "off",
     "prettier/prettier": "error",
     "react/jsx-wrap-multilines": ["error", {"declaration": false, "assignment": false}],
     "react-hooks/rules-of-hooks": "error",
