--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@unform/web": "^2.1.0",
     "axios": "^0.19.2",
     "clsx": "^1.1.0",
+    "cross-env": "^7.0.2",
     "html-react-parser": "^0.10.3",
     "jsonwebtoken": "^8.5.1",
     "polished": "^3.6.3",
@@ -25,7 +26,7 @@
     "yup": "^0.29.0"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "cross-env NODE_ENV=development react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
