--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "yup": "^0.29.0"
   },
   "scripts": {
-    "start": "cross-env NODE_ENV=development react-scripts start",
+    "start:dev": "cross-env NODE_ENV=development react-scripts start",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
