--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -39,9 +39,9 @@
     "react/jsx-filename-extension": [1, { "extensions": [".tsx"] }],
     "import/prefer-default-export": "off",
     "@typescript-eslint/explicit-function-return-type": [
-      "error",
+      "off",
       {
-        "allowExpressions": true
+        "arrowExpressions": true
       }
     ],
     "react/jsx-one-expression-per-line": "off",
