--- a/package.json
+++ b/package.json
@@ -1,32 +1,9 @@
 {
-  "name": "telee-ms-frontend-ts",
+  "name": "telee-ms-frontend",
   "version": "0.1.0",
   "private": true,
-  "dependencies": {
-    "@material-ui/core": "^4.9.13",
-    "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.3.2",
-    "@testing-library/user-event": "^7.1.2",
-    "@unform/core": "^2.1.0",
-    "@unform/web": "^2.1.0",
-    "axios": "^0.19.2",
-    "clsx": "^1.1.0",
-    "cross-env": "^7.0.2",
-    "html-react-parser": "^0.10.3",
-    "jsonwebtoken": "^8.5.1",
-    "polished": "^3.6.3",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
-    "react-icons": "^3.10.0",
-    "react-quill": "^1.3.5",
-    "react-router-dom": "^5.1.2",
-    "react-scripts": "3.4.1",
-    "styled-components": "^5.1.0",
-    "typescript": "~3.7.2",
-    "yup": "^0.29.0"
-  },
   "scripts": {
-    "start:dev": "cross-env NODE_ENV=development react-scripts start",
+    "dev": "cross-env NODE_ENV=development react-scripts start",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -46,6 +23,30 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "dependencies": {
+    "@material-ui/core": "^4.9.13",
+    "@testing-library/jest-dom": "^4.2.4",
+    "@testing-library/react": "^9.3.2",
+    "@testing-library/user-event": "^7.1.2",
+    "@unform/core": "^2.1.0",
+    "@unform/web": "^2.1.0",
+    "axios": "^0.19.2",
+    "clsx": "^1.1.0",
+    "cross-env": "^7.0.2",
+    "history": "^4.10.1",
+    "html-react-parser": "^0.10.3",
+    "jsonwebtoken": "^8.5.1",
+    "polished": "^3.6.3",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
+    "react-icons": "^3.10.0",
+    "react-quill": "^1.3.5",
+    "react-router-dom": "^5.1.2",
+    "react-scripts": "3.4.1",
+    "styled-components": "^5.1.0",
+    "typescript": "~3.7.2",
+    "yup": "^0.29.0"
   },
   "devDependencies": {
     "@types/jest": "^24.0.0",
