--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -31,6 +31,7 @@
   "rules": {
     "react/prop-types": "off",
     "react/jsx-props-no-spreading": "off",
+    "no-param-reassign": "off",
     "prettier/prettier": "error",
     "no-unused-expressions": "off",
     "react/jsx-wrap-multilines": ["error", {"declaration": false, "assignment": false}],
